docs/7.56/md/abapderived_types_comp.md
---
title: "Components of BDEF Derived Types"
description: |
  BDEF derived types(https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrap_derived_type_glosry.htm 'Glossary Entry') are derived by the ABAP runtime framework(https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_runtime_frmwk_glosry.htm 'Glossary Entry') from CDS entit
version: "7.56"
category: "types"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_comp.htm"
abapFile: "abapderived_types_comp.htm"
keywords: ["select", "insert", "update", "delete", "do", "if", "case", "try", "method", "class", "data", "types", "internal-table", "abapderived", "comp"]
---

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_reference.htm) →  [ABAP for RAP Business Objects](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_for_rap_bos.htm) →  [Other RAP-Supporting ABAP Language Elements](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_rap_other.htm) →  [ABAP for RAP, BDEF Derived Types](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrpm_derived_types.htm) → 

Components of BDEF Derived Types

[BDEF derived types](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrap_derived_type_glosry.htm "Glossary Entry") are derived by the [ABAP runtime framework](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_runtime_frmwk_glosry.htm "Glossary Entry") from [CDS entities](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_entity_glosry.htm "Glossary Entry") and their behavior definition in the [BDEF](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_behavior_definition_glosry.htm "Glossary Entry"). Internal tables and structures that are typed with BDEF derived types contain components of CDS entities, i. e. persisted key and data field values, that retain their original line type. Yet, BDEF derived types also contain additional RAP components that do not derive their line type from the entity. They have special, tailor-made line types that provide additional information required in the context of transactional processing. The names of those RAP components begin with % to avoid naming conflicts with components of the CDS entities.

The use of the components depends on the RAP operation and/or context, for example, %pid is only available for [late numbering](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbdl_late_numbering.htm) scenarios. All of the % components are generated by the ABAP compiler and are either typed with data types from the [ABAP Dictionary](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_dictionary_glosry.htm "Glossary Entry") or contain % components themselves. Among the components, there are also [component groups](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencomponent_group_glosry.htm "Glossary Entry") available. They begin with %, too, and serve the purpose of summarizing groups of table columns under a single name. For example, %key summarizes all primary keys of persisted instances.

See the details on the components following the links:

-   Components related to keys and [RAP BO instance](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrap_bo_instance_glosry.htm "Glossary Entry") identification
    -   [Use of keys and RAP BO instance identifiers in a nutshell](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_keys_identifiers.htm)
    -   [%cid](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_cid.htm)
    -   [%cid\_ref](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_cid_ref.htm)
    -   [%is\_draft](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_is_draft.htm)
    -   [%key](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_key.htm)
    -   [%pid](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_pid.htm)
    -   [%pre](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_pre.htm)
    -   [%tky](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_tky.htm)
    -   [%tmp](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_tmp.htm)
-   Components related to information processing
    -   [%element](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_element.htm)
    -   [%fail](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_fail.htm)
    -   [%global](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_global.htm)
    -   [%msg](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_msg.htm)
    -   [%other](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_other.htm)
    -   [%path](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_path.htm)
    -   [%state\_area](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_state_area.htm)
-   Miscellaneous components
    -   [%action](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_action.htm)
    -   [%assoc](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_assoc.htm)
    -   [%control](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_control.htm)
    -   [%create](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_create.htm)
    -   [%data](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_data.htm)
    -   [%delete](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_delete.htm)
    -   [%features](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_features.htm)
    -   [%field](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_field.htm)
    -   [%op](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_op.htm)
    -   [%own](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_own.htm)
    -   [%param](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_param.htm)
    -   [%perm](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_perm.htm)
    -   [%target](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_target.htm)
    -   [%update](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_update.htm)

Hints

-   The components of BDEF derived types can be checked via the element information in [ADT](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenadt_glosry.htm "Glossary Entry") by choosing F2 for the typed variable. Note that %key and %data are component groups. The field names of the key and data fields are both displayed without the % component and as part of the % component.
    ![Figure](bdoc_derived_types_adt_f2.png)
    
    For a convenient handling and specification of the % components, the ADT code completion shows possible entries and simplifies inserting them without the need to remember the respective field names from the underlying CDS view.
    
    ![Figure](bdoc_derived_types_adt_f2_2.png)
-   If the full entity type of a data element is available in a BDEF derived type in the context of component groups, the components can be accessed directly without using the % component, that is, for example, %data-field\_name. The specification of field\_name alone is the same as using it together with the %data component (%data-field).
    
    Note that the value assignment for the keys in BDEF derived types should be done with care. For example, in types in which %data and %key are available, %data additionally includes %key as a component. In such types, a value assignment for the keys might be done in multiple ways. In principal, a value filled for %key-key\_field\_name is the same as key\_field\_name (without the % component), %data-key\_field\_name and %data-%key-key\_field\_name. However, if values are specified for a primary key field more than once, the value that is last specified is respected. The compiler does not show an error message for multiple specification.
    

Executable Example

The two programs DEMO\_RAP\_DERIVED\_TYPES\_TABLE and DEMO\_RAP\_DERIVED\_TYPES\_STRUC allow the selection of a particular BDEF derived type, TYPE TABLE FOR or TYPE STRUCTURE FOR respectively, and visualize the availability of the components of the individual BDEF derived type in an internal table that is displayed in an output window. The program makes use of a managed RAP BO. The dummy BDEF DEMO\_MANAGED\_ROOT\_TEST contains various elements in the behavior body to show many of the components in the output. The dummy [behavior pool](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbehavior_pool_glosry.htm "Glossary Entry") DEMO\_MANAGED\_ROOT\_TEST does not contain any method implementations in the class CCIMP include. Since variables cannot be declared with many of the BDEF derived types outside of the implementation class (for example, in a program), the global class BP\_DEMO\_MANAGED\_ROOT\_TEST contains variables that are typed with the various BDEF derived types and methods (get\_comp and get\_comp\_table) that get the components.

Note: The availability of components varies depending on the specification in the BDEF:

-   %is\_draft is only available for [draft](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbdl_with_draft.htm) scenarios.
-   %pid is only available for [late numbering](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbdl_late_numbering.htm) scenarios.
-   For example, in the case of TYPE STRUCTURE FOR GLOBAL FEATURES RESULTS, which is similar for several other types that require a certain specification in the BDEF, only those elements that are specified with features : global are available as components.
-   Wherever %key is available, %tky can be specified, too. [%pky](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_pky.htm) can, in principal, also be specified (except in [CREATE](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapmodify_entity_entities_op.htm) operations).
-   Wherever %key and %data are available, the actual key and data fields can be specified as well without the % component. Hence, the field names are also available as components.

Continue
[Components related to keys and RAP BO instance identification](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_keys_id.htm)
[Components related to information processing](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_info.htm)
[Miscellaneous components](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_misc.htm)
[Examples for BDEF Derived Type Components](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenderived_types_abexas.htm)